ie6 sucks part1

--- a/app/stylesheets/e3e.less
+++ b/app/stylesheets/e3e.less
@@ -106,20 +106,21 @@ p {margin: 0.4em 0;}
 #top {width: 100%; position: fixed; left: 0; top: 0; z-index: 3000;}
 #bar {width: 100%; overflow: hidden; height: 10px;}
 #header {width: 900px; margin: auto; color: white; }
-#header h1 {float: left; width: 89px; height: 35px; margin-top: 15px; }
-#header h2 {float: left; margin-top: 34px;  font-variant: small-caps; margin-left: 3px;
+#header h1 {float: left; display: inline; width: 89px; height: 35px; margin-top: 15px; }
+#header h2 {float: left; display: inline; margin-top: 34px;  font-variant: small-caps; margin-left: 3px;
             font-size: 15px; letter-spacing: 0.05em; font-family: Verdana}
 
-#logo {float: left; margin-right: 2em; margin-bottom: 1em;}
+#logo {float: left; display: inline; margin-right: 2em; margin-bottom: 1em;}
 #e3elogo {width: 166px; height: 56px; margin: 0 0 1em -5px;
           background: transparent url(../images/e3elogo.png) 0 0 no-repeat; text-indent: -1000px;}
 
-
+.ie6sucks {text-align: center; }
 #page {width: 900px; margin: 0em auto 5em auto; background-color: white; padding: 70px 1em 0 1em;
-       border: 0px solid @border;
+       border: 0px solid @border; text-align: left;
        min-height:500px;
        height:auto !important;
        height:500px;
+       _width: 1000px; /* IE6 */
 }
 
 
@@ -131,22 +132,23 @@ p {margin: 0.4em 0;}
 #head p {font-variant: small-caps; margin-top: -1em; }
 
 #navigation { font-family: "Lucida-Grande","Verdana",sans-serif;
-              width: 900px; margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
-#navigation .sections {float: left; }
+    width: 900px; _width: 1000px; /* IE6 */
+    margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
+#navigation .sections {float: left; display: inline;}
 
 /* background-image: url(../images/cellshade.png); background-repeat: repeat-x; background-position: 0 0px; */
-#navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
+#navigation  a, #navigation span {display: block; float: left; display: inline;margin-right: 0.5em;
                                   padding: 0.3em 1em; font-size: 110%;
                                   .tab-borders; color: black;}
 #navigation span {color: white; background-image: none;
-    padding: 0.7em 1em;}
+                  padding: 0.7em 1em;}
 #navigation a:hover { padding: 0.7em 1em;}
 
-#navigation .session {float: right;  margin-right: -1em;}
+#navigation .session {float: right;  margin-right: -1em; _margin-right: 0em;}
 #navigation .session a {padding: 0.3em; color: white; margin-top: 0.2em;
                         background-color: @border; .round;
                         background-image: none;}
-#navigation .session a:hover {background-color: @gris;}
+#navigation .session a:hover {background-color: @gris; padding: 0.3em;}
 
 .content {padding: 1em 2em;}
 
@@ -154,7 +156,7 @@ p {margin: 0.4em 0;}
                color: white; width: 100%; margin: 0 auto; padding: 5px 2px; text-align: center;
                -moz-border-radius: 0.2em; -webkit-border-radius: 0.2em; }
 
-.col3 {float: left; width: 30%; margin: 2em 3% 2em 0;}
+.col3 {float: left; display: inline;width: 30%; margin: 2em 3% 2em 0; _margin-right: 0px;}
 .col3 h2 {margin-left: 8px;}
 .col3 h1 {margin-left: 8px; font-size: 180%; font-style: normal;}
 .col3 img { background-color: @medio; width: 250px;height: 150px; margin-bottom: 1em;
@@ -165,12 +167,12 @@ strong {font-weight: bold; }
 p.about b {display: block; margin: 0.2em 1em; padding: 0;}
 
 .divided {width: 100%; overflow: hidden; margin: 2em 0;}
-.divided form {float: left; width: 45%;
+.divided form {float: left; display: inline;width: 45%;
                background-color: @fondo; border: 1px solid @border; padding: 1em;}
 #new_user_session { margin-right: 2%;}
 
 .divided input[type=text], .divided input[type=password]
-{border-style: solid; border-width: 1px; width: 220px;
+{border-style: solid; border-width: 1px; width: 220px; 
  border-color: #D4D4D4 #EBEBEB #EBEBEB #D4D4D4;}
 .dialog .fieldWithErrors input, .divided .fieldWithErrors input {
     border-color: @error;
@@ -180,8 +182,9 @@ p.about b {display: block; margin: 0.2em 1em; padding: 0;}
 
 .divided p.info, .dialog p.info {margin-left: 1em;}
 
+form select {_width: 200px;}
 form input[type=text], form input[type=password] {border: 1px solid @medio; padding: 2px;}
-form input[type=radio] {margin-right: 0.3em; display: block; float: left; margin-top: 0.15em;}
+form input[type=radio] {margin-right: 0.3em; display: block; float: left; display: inline;margin-top: 0.15em;}
 form input[type=submit] {margin-top: 0.5em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
 form p span.fake_field {
@@ -194,14 +197,14 @@ form span.fieldWithErrors input {border-color: #c00;}
 form p.info {margin: 1em 0 0.5em 8em; color: gray; font-style: italic;}
 form p.save {background-color: @fondo; padding: 0.5em 2em; margin: 1em 6em 1em 6em; width: auto;
              -moz-border-radius: 1em; -webkit-border-radius: 1em;}
-form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
+form label {float: left; display: inline;display: block; width: 6em; text-align: right; padding-top: 0.2em;
             margin-right: 0.5em; margin-left: 2.5em; color: @darkgris;}
 form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
 form p.error {background-color: #FFBFBF; padding: 5px 0; text-align: center; .round;}
-form a {display: block; float: left; margin: 2em 0 0 9em;}
+form a {display: block; float: left; display: inline;margin: 2em 0 0 9em;}
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
-form p input[type=submit] {margin-left: 9em;}
+form p input[type=submit] {margin-left: 9em; }
 form p.feedback textarea {width: 80%; height: 10em;}
 
 .errorExplanation {margin-left: 2em; color: @error;}
@@ -209,7 +212,7 @@ form p.feedback textarea {width: 80%; height: 10em;}
 .errorExplanation h2 {font-size: 1px; display: none; width: 0;}
 
 #encuesta {font-size: 110%;}
-#encuesta input[type=text] {width: 6em;}
+#encuesta input[type=text] {width: 6em; _width: 50px;}
 #encuesta textarea {width: 40em; height: 10em;}
 
 form table {margin: 1em 0 2em 8em;}
@@ -221,7 +224,7 @@ form table td.name {text-align: right; padding-right: 0.5em; width: 12em;}
 #chart_panel {margin: 1em 0; border: 1em solid @fondo; .round;}
 #chart {width: 100%; margin: 0; border: 0; padding: 0;}
 .chart_controls {width: 100%; overflow: hidden; margin-left: 4em; margin-top: 0.5em;}
-.chart_controls a {display: block; margin-right: 3px; float: left; width: 38px; height: 38px; text-indent: -10000px;}
+.chart_controls a {display: block; margin-right: 3px; float: left; display: inline;width: 38px; height: 38px; text-indent: -10000px;}
 #max_up {background: transparent url(../images/botones.gif) -2px -2px no-repeat;}
 #max_up:hover {background: transparent url(../images/botones.gif) -42px -2px no-repeat;}
 #max_down {background: transparent url(../images/botones.gif) -2px -42px no-repeat;}
@@ -236,7 +239,7 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 
 .chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
 .chartfields input { font-size: 80%; border: 1px solid @medio; padding: 1px;
-                     width: 27px; float: left; margin-left: 4.5px; margin-right: 3px;}
+                     width: 27px; float: left; display: inline;margin-left: 4.5px; margin-right: 3px;}
 
 /* USERS */
 table.users { margin: 1em; }
@@ -246,9 +249,9 @@ table.users td {padding: 0.2em 1em;}
 .calc {font-family: monospace; letter-spacing: 0.5em; font-size: 1.3em;}
 
 #partners {background-color: @border; margin: 2em -3em -1em -3em; padding: 2em 4em; 
-    text-align: center;}
+           text-align: center;}
 #pagefoot {background-color: @border; margin: 2em -3em -1em -3em; padding: 0em 4em;
-    text-align: center;}
+           text-align: center;}
 #partners img {margin: 0em 1em 0 1em; border: 1px solid @gris; padding: 3px; background-color: white;}
 
 /** IMAGINERIA */
