--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,42 +1,42 @@
 <h1 id="e3elogo">Qué es E3E</h1>
 
+<h2>Bienvenido al sitio E3E</h2>
 <p class="about">
-  E3E es una iniciativa que pretende obtener datos reales sobre el consumo energético de viviendas de España y los hábitos de consumo de sus habitantes.<br/>
-  Mediante una sencilla encuesta E3E proporciona a los usuarios información sobre el consumo energético de una vivienda y la compara con el consumo de las viviendas del mismo tipo y localidad.<br/>
-  E3E es un proyecto de investigación para comparar el consumo de su vivienda con otras similares.<br/><br/>
-  <b>Conocer el consumo de una vivienda ayuda a controlarlo y por tanto a la reducción de las emisiones de CO2.</b>
-  <b>Conocer el consumo de una vivienda en comparación con las demás ayuda al usuario a saber cómo es su vivienda y si es conveniente su rehabilitación.</b><br/>
-  E3E contribuye a fijar las escalas para la calificación y certificación energética de edificios existentes.
+  E3E es un proyecto de investigación que pretende comparar el consumo energético de las viviendas de España y los hábitos de consumo de sus habitantes.
 </p>
-<br/>
+<p class="about">
+  Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO2 de su vivienda y saber si es conveniente su rehabilitación.
+</p>
+<p class="about">
+  E3E contribuye a fijar las escalas para la calificación y certificación energética de los edificios existentes.
+</p>
+<br/><br/>
 <h2>Cómo colaborar</h2>
 <p class="about">
-  Simplemente rellenando la encuesta que consta de 36 preguntas sobre su vivienda y sus hábitos de consumo.<br/>
-  Pasado un tiempo, con los resultados del proyecto de investigación, E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.<br/>
-  Los pasos son los siguientes:<br/>
+  Para colaborar en este proyecto y poder conocer cómo se sitúa su vivienda en cuanto a eficiencia energética tiene que seguir tres sencillos pasos:<br/>
 </p>
 <div class="col3">
   <h2>Paso 1:</h2>
   <h1>Encuesta</h1>
   <img src="/images/encuesta.png" alt="encuesta" />
   <p>
-    Para poder saber si su vivienda consume demasiado comparada con otras viviendas parecidas necesitamos conocerla un poco. Para ello complete la encuesta sobre su edificio que aparece en la segunda pestaña, paso 1: encuesta. Los datos son totalmente confidenciales porque esta web no registra ningún dato personal, nada de lo que indique en esta web podrá servir para identificarle.
+    Completar una encuesta sobre su vivenda y hábitos de consumo que no le llevará más de 10 minutos. Algunas preguntas se activan o desactivan en función de respuestas anteriores.
   </p>
 </div>
 <div class="col3">
-  <h2>Paso 2:</h2>
-  <h1>Gas</h1>
+  <h2>Pasos 2 y 3:</h2>
+  <h1>Evolución del consumo</h1>
   <img src="/images/consumo-gas2.png" alt="evolución del consumo de gas" />
   <p>
-    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente.<br/>
-    Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
+    Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
+  </p>
 </div>
 <div class="col3">
-  <h2>Paso 3:</h2>
-  <h1>Electricidad</h1>
+  <h2>Paso 4:</h2>
+  <h1>Ver informe</h1>
   <img src="/images/consumo-electricidad.png" alt="evolución del consumo eléctrico"/>
   <p>
-    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
+    Acceder al informe que ha generado la herramienta. E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.
   </p>
 </div>
 
@@ -62,8 +62,8 @@
   relacionados con la energética edificatoria.
 </p>
 <div id="partners">
-  <%= link_to image_tag('partners/ministerio de vivienda.jpg')  %>
-  <%= link_to image_tag('partners/csic.gif')  %>
-  <%= link_to image_tag('partners/torroja.png')  %>
-  <%= link_to image_tag('partners/aicia2.jpg')  %>
+  <%= link_to image_tag('partners/ministerio de vivienda.jpg'), 'http://www.mviv.es/'  %>
+  <%= link_to image_tag('partners/csic.gif'), 'http://www.csic.es/'  %>
+  <%= link_to image_tag('partners/torroja.png'), 'http://www.ietcc.csic.es/'  %>
+  <%= link_to image_tag('partners/aicia2.jpg'), 'http://www.aicia.es/'  %>
 </div>
