--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -6,7 +6,7 @@
   <head>
     <title>E3E - <%= yield(:title) || 'E3E' %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
-    <link rel="icon" href="/e3efavicon1.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <%= stylesheet_link_tag 'e3e' %>
     <%= stylesheet_link_tag 'jquery.jgrowl'  %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -28,35 +28,39 @@
       <div id="top">
         <div id="bar" class="<%= @controller.class.to_s.downcase %>">
         </div>
-        <div id="navigation">
-          <div class="sections">
-            <%= section t(:about), root_path, :AboutController %>
-            <%= section t(:survey), survey_path, :SurveysController %>
-            <%= section t(:gas), gas_path, :GasController %>
-            <%= section t(:elec), electricidad_path, :ElectricidadController %>
-            <%= section t(:report), report_path, :ReportsController %>
-          </div>
-          <div class="session">
-            <%= link_to t(:feedback), feedback_path %>
-            <% if signed_in? %>
-              <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
-              <%= link_to t('users.profile'), edit_user_path(current_user) %>
-              <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-            <% end -%>
+        <div class="ie6sucks">
+          <div id="navigation">
+            <div class="sections">
+              <%= section t(:about), root_path, :AboutController %>
+              <%= section t(:survey), survey_path, :SurveysController %>
+              <%= section t(:gas), gas_path, :GasController %>
+              <%= section t(:elec), electricidad_path, :ElectricidadController %>
+              <%= section t(:report), report_path, :ReportsController %>
+            </div>
+            <div class="session">
+              <%= link_to t(:feedback), feedback_path %>
+              <% if signed_in? %>
+                <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
+                <%= link_to t('users.profile'), edit_user_path(current_user) %>
+                <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
+              <% end -%>
+            </div>
           </div>
         </div>
       </div>
-
-      <div id="page">
-        <% if flash[:notice] %>
-          <div class="flash" style="display:none"><%= flash[:notice] %></div>
-        <% end %>
-        <div class="content">
-          <%= yield %>
+      <div class="ie6sucks">
+        <div id="page">
+          <% if flash[:notice] %>
+            <div class="flash" style="display:none"><%= flash[:notice] %></div>
+          <% end %>
+          <div class="content">
+            <%= yield %>
+          </div>
         </div>
+        <div class="push"></div>
       </div>
-      <div class="push"></div>
     </div>
+    <div style="clear: both">&nbsp</div>
     <div class="footer">
       <div class="bottom">
         E3E v0.1021 -
