--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,5 +1,4 @@
 <h1 id="e3elogo">Qué es E3E</h1>
-
 <h2>Bienvenido al sitio E3E</h2>
 <p class="about">
   E3E es un proyecto de investigación que pretende comparar el consumo energético de las viviendas de España y los hábitos de consumo de sus habitantes.
@@ -41,7 +40,10 @@
 </div>
 
 <br style="clear: both;" />
-
+<p class="about">
+  Tenga en cuenta que esta web nunca le pedirá datos personales, como dirección, nombre o apellidos, correo electrónico o teléfono, por lo que toda la información será completamente anónima.
+</p>
+<br/><br/>
 <h2>Quiénes somos</h2>
 
 <p class="about">
