--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,13 +1,6 @@
 
 <%= title t(:title) %>
 
-<p class="about">Muchas gracias!</p>
-<br/>
-<h2>1. Sobre su vivienda</h2>
-<p class="about">Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
-<br/>
-<h2>2. Sobre su consumo</h2>
-<p class="about">Suspendisse vitae ligula leo. Fusce egestas, odio sit amet fermentum blandit, mauris erat malesuada magna, ac molestie mi sem sit amet nisl. Mauris malesuada ligula libero. Suspendisse ipsum nunc, lacinia sit amet lacinia ac, rutrum porta mi. Pellentesque auctor rhoncus vehicula. Duis dolor tellus, imperdiet in consequat sit amet, volutpat sed nisl. Nunc aliquam convallis ipsum, ultricies fermentum tortor pellentesque sed. Duis eleifend tempor nunc vitae ultricies. Nam in urna massa. Morbi condimentum pulvinar nisl id porttitor. Nam porta tempor elit nec eleifend. Donec tempor neque sit amet nisi blandit convallis. Vestibulum dictum accumsan nunc sit amet tincidunt. Aenean faucibus gravida tortor sit amet ultrices.</p>
-<br/>
-<h2>3. Consejos para mejorar su consumo energético</h2>
-<p class="about">Aliquam vehicula pulvinar elit et volutpat. Nunc ornare, mi vitae euismod egestas, felis tellus ornare quam, eu suscipit eros nisl ut dui. Morbi convallis, nunc eget hendrerit auctor, sem urna tincidunt ipsum, vitae vestibulum turpis elit et orci. Cras elementum, turpis at posuere vulputate, enim eros volutpat ante, sed ornare urna massa euismod sem. Aliquam elit arcu, mollis ac posuere vitae, porttitor vel libero. Vestibulum sit amet diam ut risus suscipit convallis id a velit. Donec mattis, felis non luctus sodales, nunc ligula rhoncus nisl, ut imperdiet lorem mi ut justo. Vivamus ac faucibus lorem. Mauris tempor lacus in erat cursus commodo. Integer vel arcu velit, quis tristique velit. Duis ac adipiscing nunc. Mauris pulvinar nunc eu neque sollicitudin aliquam.</p>
+<p class="about">
+  Muchas gracias por rellenar la encuesta e introducir sus datos de consumo. Con los resultados del estudio en unos meses podrá comparar el consumo de su vivienda con el resto del parque edificatorio. Por favor <strong>recuerde su nombre de usuario para volver a consultar este portal</strong>.
+</p>
