--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,10 +1,11 @@
-<h1 id="e3elogo">Qué es E3E</h1>
+<%= image_tag 'home/home1.jpg', :class => 'home' %>
+
 <h2>Bienvenido al sitio E3E</h2>
 <p class="about">
   E3E es un proyecto de investigación que pretende comparar el consumo energético de las viviendas de España y los hábitos de consumo de sus habitantes.
 </p>
 <p class="about">
-  Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO2 de su vivienda y saber si es conveniente su rehabilitación.
+  Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO<sup>2</sup> de su vivienda y saber si es conveniente su rehabilitación.
 </p>
 <p class="about">
   E3E contribuye a fijar las escalas para la calificación y certificación energética de los edificios existentes.
@@ -14,36 +15,48 @@
 <p class="about">
   Para colaborar en este proyecto y poder conocer cómo se sitúa su vivienda en cuanto a eficiencia energética tiene que seguir tres sencillos pasos:<br/>
 </p>
-<div class="col3">
-  <h2>Paso 1:</h2>
-  <h1>Encuesta</h1>
-  <img src="/images/encuesta.png" alt="encuesta" />
-  <p>
-    Completar una encuesta sobre su vivenda y hábitos de consumo que no le llevará más de 10 minutos. Algunas preguntas se activan o desactivan en función de respuestas anteriores.
-  </p>
-</div>
-<div class="col3">
-  <h2>Pasos 2 y 3:</h2>
-  <h1>Evolución del consumo</h1>
-  <img src="/images/consumo-gas2.png" alt="evolución del consumo de gas" />
-  <p>
-    Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
-  </p>
-</div>
-<div class="col3">
-  <h2>Paso 4:</h2>
-  <h1>Ver informe</h1>
-  <img src="/images/consumo-electricidad.png" alt="evolución del consumo eléctrico"/>
-  <p>
-    Acceder al informe que ha generado la herramienta. E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.
-  </p>
+<br/>
+<div class="block">
+  <div class="col4">
+    <h2 class="step" id="step1">paso1: encuesta</h2>
+    <p><span class="num-step" id="num-step-1">1.</span>Completar una encuesta sobre su vivenda y hábitos de consumo que no le llevará más de 10 minutos. Algunas preguntas se activan o desactivan en función de respuestas anteriores.
+    </p>
+  </div>
+  <div class="col4">
+    <h2 class="step" id="step2">paso2: gas</h2>
+    <p><span class="num-step" id="num-step-2">2.</span>
+      Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
+    </p>
+  </div>
+  <div class="col4">
+    <h2 class="step" id="step3">paso3: electricidad</h2>
+    <p><span class="num-step" id="num-step-3">3.</span>
+      Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
+    </p>
+  </div>
+  <div class="col4">
+    <h2 class="step" id="step4">paso4: Ver informe</h2>
+    <p><span class="num-step" id="num-step-4">4.</span>
+      Acceder al informe que ha generado la herramienta. E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.
+    </p>
+  </div>
 </div>
 
-<br style="clear: both;" />
-<p class="about">
-  Tenga en cuenta que esta web nunca le pedirá datos personales, como dirección, nombre o apellidos, correo electrónico o teléfono, por lo que toda la información será completamente anónima.
+<br/><br/><br/>
+<div class="block">
+  <div id="video" class="col2"><object width="400" height="390"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=8079860&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=8079860&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="390"></embed></object></div>
+  <div id="learn" class="col2">
+    <h2>Aprenda algo más del proyecto E3E</h2>
+    <p class="about">En este vídeo puede ver cómo se rellena la encuesta de E3E. COMPLETAR TEXTO</p>
+    <%=  link_to 'Comenzar', survey_path, :id => 'start_here' %>
+  </div>
+</div>
+<br/>
+<p class="about note">
+  * Tenga en cuenta que esta web nunca le pedirá datos personales, como dirección, nombre o apellidos, correo electrónico o teléfono, por lo que toda la información será completamente anónima.
 </p>
-<br/><br/>
+<br/><br/><br/>
+
 <h2>Quiénes somos</h2>
 
 <p class="about">
@@ -63,9 +76,14 @@
   trabajos en general sobre el uso racional de la energía, y en especial
   relacionados con la energética edificatoria.
 </p>
-<div id="partners">
+<div id="partners" class="block">
   <%= link_to image_tag('partners/ministerio de vivienda.jpg'), 'http://www.mviv.es/'  %>
   <%= link_to image_tag('partners/csic.gif'), 'http://www.csic.es/'  %>
   <%= link_to image_tag('partners/torroja.png'), 'http://www.ietcc.csic.es/'  %>
   <%= link_to image_tag('partners/aicia2.jpg'), 'http://www.aicia.es/'  %>
-</div>
+  <div id="copyright">
+    <p>&copy; Instituto de Ciencias de la Construcción Eduardo Torroja.<br/>
+      Software desarrollado por <a href="http://calclab.com" class="calc">calc</a><br/>
+      Datos legales aquí (si hiciese falta).
+    <p/>
+  </div>
