--- a/app/views/layouts/zd.e3e.html.erb
+++ b/app/views/layouts/zd.e3e.html.erb
@@ -7,7 +7,7 @@
     <title>E3E - <%= yield(:title) || 'E3E' %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <%= stylesheet_link_tag 'public' %>
+    <%= stylesheet_link_tag 'e3e' %>
     <%= stylesheet_link_tag 'jquery.jgrowl'  %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <%= javascript_include_tag 'jquery.ichart', 'jquery.jgrowl.min' %>
@@ -25,19 +25,11 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="ie6sucks">
-        <div id="top" class="container">
-          <div id="logo">e3e</div>
+      <div id="top">
+        <div id="bar" class="<%= @controller.class.to_s.downcase %>">
+        </div>
+        <div class="ie6sucks">
           <div id="navigation">
-            <div class="session">
-              <%= link_to t(:feedback), feedback_path, :id => 'feedback' %>
-              <% if signed_in? %>
-                <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
-                <%= link_to t('users.profile'), edit_user_path(current_user) %>
-                <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-              <% end -%>
-            </div>
-
             <div class="sections">
               <%= section t(:about), root_path, :AboutController %>
               <%= section t(:survey), survey_path, :SurveysController %>
@@ -45,12 +37,19 @@
               <%= section t(:elec), electricidad_path, :ElectricidadController %>
               <%= section t(:report), report_path, :ReportsController %>
             </div>
+            <div class="session">
+              <%= link_to t(:feedback), feedback_path %>
+              <% if signed_in? %>
+                <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
+                <%= link_to t('users.profile'), edit_user_path(current_user) %>
+                <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
+              <% end -%>
+            </div>
           </div>
-        </div> <!-- top -->
+        </div>
       </div>
-
       <div class="ie6sucks">
-        <div id="page" class="container">
+        <div id="page">
           <% if flash[:notice] %>
             <div class="flash" style="display:none"><%= flash[:notice] %></div>
           <% end %>
@@ -61,7 +60,13 @@
         <div class="push"></div>
       </div>
     </div>
-
+    <div style="clear: both">&nbsp</div>
+    <div class="footer">
+      <div class="bottom">
+        E3E v0.1021 -
+        <%= link_to 'Software hecho a mano por &nbsp;<span class="calc">calc</span>', 'http://calclab.com' %>
+      </div>
+    </div>
 
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
