--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -73,6 +73,7 @@
 <p class="about">Pinchando sobre el gráfico puede cambiar el valor del consumo según el mes. De aquellos meses
   que no disponga datos (N/D), déjelo en blanco (puede poner en blanco un mes pulsando sobre el nombre del mismo).</p>
 
+<div id="invoice">
 <div id="chart_panel">
   <div class="chart_controls">
     <a id="max_up" href="#" onclick="return false;">+</a>
@@ -99,4 +100,4 @@
     <a name="guardar"></a>
   </p>
 <% end %>
-
+</div>
