--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -13,6 +13,7 @@ html {
     background-color: white;
 }
 
+li {list-style-type: disc; margin-left: 2em;}
 a {text-decoration: none;}
 a:hover {text-decoration: underline;}
 strong {font-weight: bold;}
@@ -29,7 +30,7 @@ html, body {
     height: 100%;
     margin: 0 auto -5em;
 }
-.footer, .push { height: 5em; }
+.footer, .push { height: 0em; }
 .footer {background-color: #252525; }
 .bottom {text-align: center; font-size: 90%; padding-top: 1em; color: @gris; border-top: 2em solid @border; }
 .bottom a:hover {color: white;}
@@ -44,50 +45,7 @@ html, body {
     _width: 900px; /* IE6 */
 }
 
-/** LAYOUT ELEMENTS */
-#top {
-    padding-top: 5px;
-    border-bottom: 1px solid @grisclaro;
-    height: 70px;
-}
-#logo {
-    width: 44px; height: 55px; float: left;
-    padding-right: 10px; 
-    border-right: 1px solid @grisclaro;
-    .sprites; .sprite-logo;
-}
-#navigation {
-    margin-left: 60px;
-    width: 830px;
-}
-.session {
-    width: 100%; overflow: hidden;
-    height: 35px;
-}
-.session a {
-    float: left; display: block; margin-right: 1em; margin-top: 5px;
-    font-size: 130%; font-style: italic;
-    color: @grisclaro;
-}
 
-.sections {width: 850px;}
-.sections > * {
-    float: left; height: 26px; 
-    .sprites;
-}
-.sections .aboutcontroller {width: 122px; .sprite-home_que; }
-.sections .surveyscontroller {width: 180px; .sprite-encuesta_off;}
-.sections .surveyscontroller.active {.sprite-encuesta_on;}
-.sections .surveyscontroller:hover {.sprite-encuesta_on;}
-.sections .gascontroller {width: 160px; .sprite-gas_off;}
-.sections .gascontroller.active {.sprite-gas_on;}
-.sections .gascontroller:hover {.sprite-gas_on;}
-.sections .electricidadcontroller {width: 220px; .sprite-electricidad_off;}
-.sections .electricidadcontroller.active {.sprite-electricidad_on;}
-.sections .electricidadcontroller:hover {.sprite-electricidad_on;}
-.sections .reportscontroller {width: 157px; .sprite-informe_off;}
-.sections .reportscontroller.active { .sprite-informe_on;}
-.sections .reportscontroller:hover { .sprite-informe_on;}
 
 /** HOME **/
 .home {padding: 1em 0; margin: 0 0 20px -3px;
@@ -123,29 +81,36 @@ span#num-step-4 {.sprite-home_step4;}
     .sprites; .sprite-hazclick;}
 p.about.note {font-size: 100%; font-style: italic; }
 
-#partners {
-    padding: 10px 0;
-    border-top: 1px solid @grisclaro;
-    border-bottom: 1px solid @grisclaro;
-}
-#partners > * { display: block; float: left; margin-right: 10px; border: 1px solid @grisclaro; }
-#partners #copyright {
-    margin-right: 0;
-    width: 272px; height: 75px;
-    background-color: #F7F7F7;
-}
-#copyright p {
-    margin: 5px; color: gray;
-}
-.calc {
-    font-family: monospace; letter-spacing: 0.5em; font-size: 130%;
-}
-
+@import 'layout';
 @import 'forms';
 
 
-#encuesta {font-size: 110%;}
+#encuesta {margin-top: 3em; font-size: 110%;}
 #encuesta input[type=text] {width: 6em; _width: 50px;}
 #encuesta textarea {width: 40em; height: 10em;}
+#encuesta h3 {font-size: 125%; color: @darkgris; border-bottom: 1px solid @grisclaro; margin: 2em 0 1em 0; padding-left: 6.5em;}
+#encuesta h4 {font-size: 100%; width: 75%; margin-left: 7em; padding-left: 1em;
+    color: @gris; border-bottom: 1px solid @grisclaro; margin-top: 2em ;  }
 
 
+/* INVOICES */
+#invoice {}
+#chart_panel {margin: 1em 0; border: 1em solid @grisclaro; }
+#chart {width: 100%; margin: 0; border: 0; padding: 0;}
+.chart_controls {width: 100%; overflow: hidden; margin-left: 4em; margin-top: 0.5em;}
+.chart_controls a {display: block; margin-right: 3px; float: left; display: inline;width: 38px; height: 38px; text-indent: -10000px;}
+#max_up {background: transparent url(../images/botones.gif) -2px -2px no-repeat;}
+#max_up:hover {background: transparent url(../images/botones.gif) -42px -2px no-repeat;}
+#max_down {background: transparent url(../images/botones.gif) -2px -42px no-repeat;}
+#max_down:hover {background: transparent url(../images/botones.gif) -42px -42px no-repeat;}
+
+
+table.dataset {margin-left: auto; margin-right: auto;}
+table.dataset td {padding-left: 0; padding-right: 0.2em;}
+table.dataset input {width: 4em; margin-left: 0; margin-right: 0;}
+table.dataset label {color: black; margin-right: 1em; width: 10em;}
+table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
+
+.chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
+.chartfields input { font-size: 80%; border: 1px solid @medio; padding: 1px;
+                     width: 27px; float: left; display: inline;margin-left: 4.5px; margin-right: 3px;}
