--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -33,17 +33,17 @@
     float: left; height: 26px;
     .sprites;
 }
-.sections .aboutcontroller {width: 122px; .sprite-home_que; }
-.sections .surveyscontroller {width: 180px; .sprite-encuesta_off;}
+.sections .aboutcontroller {width: 133px; .sprite-quees; }
+.sections .surveyscontroller {width: 178px; .sprite-encuesta_off;}
 .sections .surveyscontroller.active {.sprite-encuesta_on;}
 .sections .surveyscontroller:hover {.sprite-encuesta_on;}
-.sections .gascontroller {width: 160px; .sprite-gas_off;}
+.sections .gascontroller {width: 147px; .sprite-gas_off;}
 .sections .gascontroller.active {.sprite-gas_on;}
 .sections .gascontroller:hover {.sprite-gas_on;}
-.sections .electricidadcontroller {width: 220px; .sprite-electricidad_off;}
+.sections .electricidadcontroller {width: 213px; .sprite-electricidad_off;}
 .sections .electricidadcontroller.active {.sprite-electricidad_on;}
 .sections .electricidadcontroller:hover {.sprite-electricidad_on;}
-.sections .reportscontroller {width: 157px; .sprite-informe_off;}
+.sections .reportscontroller {width: 167px; .sprite-informe_off;}
 .sections .reportscontroller.active { .sprite-informe_on;}
 .sections .reportscontroller:hover { .sprite-informe_on;}
 
