--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -92,6 +92,16 @@ p.about.note {font-size: 100%; font-style: italic; }
 #encuesta h4 {font-size: 100%; width: 75%; margin-left: 7em; padding-left: 1em;
     color: @gris; border-bottom: 1px solid @grisclaro; margin-top: 2em ;  }
 
+/* SURVEY */
+#encuesta .number {width: 18px; height: 13px; float: left; margin: 4px 3px 0 0;
+    .sprites;}
+#encuesta span#survey-num-1 {.sprite-e_num1;}
+#encuesta span#survey-num-2 {.sprite-e_num2;}
+#encuesta span#survey-num-3 {.sprite-e_num3;}
+#encuesta span#survey-num-4 {.sprite-e_num4;}
+#encuesta span#survey-num-5 {.sprite-e_num5;}
+#survey-submit { width: 165px; height: 26px; border: 0; cursor: pointer;
+    .sprites; .sprite-guardar_encuesta;}
 
 /* INVOICES */
 #invoice {}
