--- a/app/stylesheets/sprites.css
+++ b/app/stylesheets/sprites.css
@@ -12,23 +12,27 @@
 .sprite-electricidad_less { background-position: 0 -108px; }
 .sprite-electricidad_more { background-position: 0 -152px; }
 .sprite-electricidad_off { background-position: 0 -196px; }
-.sprite-electricidad_on { background-position: 0 -227px; }
-.sprite-encuesta_off { background-position: 0 -258px; }
-.sprite-encuesta_on { background-position: 0 -289px; }
-.sprite-gas_less { background-position: 0 -320px; }
-.sprite-gas_more { background-position: 0 -364px; }
-.sprite-gas_off { background-position: 0 -408px; }
-.sprite-gas_on { background-position: 0 -439px; }
-.sprite-hazclick { background-position: 0 -470px; }
-.sprite-help_paso1 { background-position: 0 -546px; }
-.sprite-help_paso2 { background-position: 0 -777px; }
-.sprite-help_paso3 { background-position: 0 -1008px; }
-.sprite-help_paso4 { background-position: 0 -1239px; }
-.sprite-home_que { background-position: 0 -1470px; }
-.sprite-home_step1 { background-position: 0 -1501px; }
-.sprite-home_step2 { background-position: 0 -1519px; }
-.sprite-home_step3 { background-position: 0 -1537px; }
-.sprite-home_step4 { background-position: 0 -1555px; }
-.sprite-informe_off { background-position: 0 -1573px; }
-.sprite-informe_on { background-position: 0 -1604px; }
-.sprite-logo { background-position: 0 -1635px; }
+.sprite-electricidad_on { background-position: 0 -228px; }
+.sprite-encuesta_off { background-position: 0 -260px; }
+.sprite-encuesta_on { background-position: 0 -292px; }
+.sprite-gas_less { background-position: 0 -324px; }
+.sprite-gas_more { background-position: 0 -368px; }
+.sprite-gas_off { background-position: 0 -412px; }
+.sprite-gas_on { background-position: 0 -444px; }
+.sprite-guardar_electricidad { background-position: 0 -476px; }
+.sprite-guardar_encuesta { background-position: 0 -507px; }
+.sprite-guardar_gas { background-position: 0 -538px; }
+.sprite-hazclick { background-position: 0 -569px; }
+.sprite-help_paso1 { background-position: 0 -645px; }
+.sprite-help_paso2 { background-position: 0 -876px; }
+.sprite-help_paso3 { background-position: 0 -1107px; }
+.sprite-help_paso4 { background-position: 0 -1338px; }
+.sprite-home_step1 { background-position: 0 -1569px; }
+.sprite-home_step2 { background-position: 0 -1587px; }
+.sprite-home_step3 { background-position: 0 -1605px; }
+.sprite-home_step4 { background-position: 0 -1623px; }
+.sprite-informe_off { background-position: 0 -1641px; }
+.sprite-informe_on { background-position: 0 -1673px; }
+.sprite-logo { background-position: 0 -1705px; }
+.sprite-quees { background-position: 0 -1771px; }
+
