--- a/app/views/surveys/_edit_edificio_equipamiento.html.erb
+++ b/app/views/surveys/_edit_edificio_equipamiento.html.erb
@@ -1,4 +1,4 @@
-<h3><%=  t(:titulo, :scope => [:encuesta, :equipo]) %></h3>
+<h3><span id="survey-num-4" class="number">4</span><%=  t(:titulo, :scope => [:encuesta, :equipo]) %></h3>
 
 
 <p class="info"><%=  t(:fuentes, :scope => [:encuesta, :equipo]) %></p>
