--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -105,7 +105,6 @@ p.about.note {font-size: 100%; font-style: italic; }
 
 /* INVOICES */
 #invoice {}
-#chart_panel {margin: 1em 0; border: 1em solid @grisclaro; }
 #chart {width: 100%; margin: 0; border: 0; padding: 0;}
 .chart_controls {width: 100%; overflow: hidden; margin-left: 4em; margin-top: 0.5em;}
 .chart_controls a {display: block; margin-right: 3px; float: left; display: inline;width: 38px; height: 38px; text-indent: -10000px;}
@@ -124,3 +123,14 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 .chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
 .chartfields input { font-size: 80%; border: 1px solid @medio; padding: 1px;
                      width: 27px; float: left; display: inline;margin-left: 4.5px; margin-right: 3px;}
+
+#chart_panel {margin: 1em 0; border: 1px solid @gas; }
+#invoice.GasController #chart_panel {border-color: @gas;}
+#invoice.ElectricidadController #chart_panel {border-color: @electricidad;}
+
+#invoice #colors {display: none;}
+#invoice.GasController #colors {background-color: @gas;}
+#invoice.ElectricidadController #colors {background-color: @electricidad;}
+#invoice .invoice_submit {height: 26px; border: 0; cursor: pointer; .sprites;}
+#invoice.GasController .invoice_submit {width: 222px; .sprite-guardar_gas;}
+#invoice.ElectricidadController .invoice_submit {width: 231px; .sprite-guardar_electricidad;}
