--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -10,7 +10,7 @@
         var isDirty = false;
         $("form input[type=submit]").attr('disabled', true);
 
-        var barColor = $("#bar").css("background-color");
+        var barColor = $("#colors").css("background-color");
         var vals = [];
         var labels = [];
         $("#dataset .data").each(function() {
@@ -73,7 +73,8 @@
 <p class="about">Pinchando sobre el gráfico puede cambiar el valor del consumo según el mes. De aquellos meses
   que no disponga datos (N/D), déjelo en blanco (puede poner en blanco un mes pulsando sobre el nombre del mismo).</p>
 
-<div id="invoice">
+<div id="invoice" class="<%= controller.class.name  %>">
+  <div id="colors">&nbsp;</div>
 <div id="chart_panel">
   <div class="chart_controls">
     <a id="max_up" href="#" onclick="return false;">+</a>
@@ -96,7 +97,7 @@
     <%= hidden_field_tag :scale_max_value,  current_user.invoice_scale_max, :id => 'scale_max_value' %>
   </div>
   <p>
-    <%= submit_tag t(:submit) %>
+    <%= submit_tag t(:submit), :class => 'invoice_submit' %>
     <a name="guardar"></a>
   </p>
 <% end %>
