--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -6,7 +6,7 @@
   <head>
     <title>E3E - <%= yield(:title) || 'E3E' %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon-e3e.ico" type="image/x-icon" />
     <%= stylesheet_link_tag 'public' %>
     <%= stylesheet_link_tag 'jquery.jgrowl'  %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
