--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -78,8 +78,8 @@
   <div id="colors">&nbsp;</div>
 <div id="chart_panel">
   <div class="chart_controls">
-    <a id="max_up" href="#" onclick="return false;">+</a>
-    <a id="max_down" href="#" onclick="return false;">-</a>
+    <a id="max_up" class="button" href="#" onclick="return false;">+</a>
+    <a id="max_down" class="button" href="#" onclick="return false;">-</a>
   </div>
   <div id="chart">
     Generando gráfico...
