--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-
-<div class="dialog">
-  <%= render :partial => 'form' %>
+<div class="login">
+  <% title t(:title) %><br/><br/>
+  <div class="dialog">
+    <%= render :partial => 'form' %>
+  </div>
 </div>
