--- a/app/stylesheets/forms.less
+++ b/app/stylesheets/forms.less
@@ -18,15 +18,15 @@ form p.save {background-color: @fondo; padding: 0.5em 2em; margin: 1em 6em 1em 6
              -moz-border-radius: 1em; -webkit-border-radius: 1em;}
 form label {float: left; display: inline;display: block; width: 6em; text-align: right; padding-top: 0.2em;
             margin-right: 0.5em; margin-left: 2.5em; color: @darkgris;}
-form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
-form p.error {background-color: #FFBFBF; padding: 5px 0; text-align: center; }
 form a {display: block; float: left; display: inline;margin: 2em 0 0 9em;}
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
 form p input[type=submit] {margin-left: 9em; }
-form p.feedback textarea {width: 80%; height: 10em;}
 
-.errorExplanation {margin-left: 2em; color: @error;}
+form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
+form p.error {color: #c00; font-weight: bold; padding: 5px 0; text-align: center; }
+.errorExplanation {margin-top: 2em; margin-left: 2em; color: @error;}
+.errorExplanation p {font-weight: bold;}
 .errorExplanation li {list-style-type: none;}
 .errorExplanation h2 {font-size: 1px; display: none; width: 0;}
 
