--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -103,6 +103,21 @@ p.about.note {font-size: 100%; font-style: italic; }
 #survey-submit { width: 165px; height: 26px; border: 0; cursor: pointer;
     .sprites; .sprite-guardar_encuesta;}
 
+/** FORM PAGES **/
+.divided {width: 100%; overflow: hidden; margin-top: 3em;}
+.divided #new_user_session {width: 40%; float: left; padding-right: 5%; }
+#new_user_session a {color: #940600;}
+.divided #new_user {float: left; width: 45%; padding-left: 4%; border-left: 1px solid @grisclaro;}
+form p.info {width: 80%;}
+.login h1, .login h2 {color: #159A26;}
+
+.comments h1, h2 {color: #159A26;}
+form p.feedback textarea {width: 95%; height: 10em;}
+
+/** PASSWORD REMINDER */
+.remind {width: 50%; margin: 4em 0 4em 210px;}
+
+
 /* INVOICES */
 #invoice {}
 #chart {width: 100%; margin: 0; border: 0; padding: 0;}
@@ -135,3 +150,6 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 #invoice .invoice_submit {height: 26px; border: 0; cursor: pointer; .sprites;}
 #invoice.GasController .invoice_submit {width: 222px; .sprite-guardar_gas;}
 #invoice.ElectricidadController .invoice_submit {width: 231px; .sprite-guardar_electricidad;}
+
+
+
