--- a/app/views/about/feedback.html.erb
+++ b/app/views/about/feedback.html.erb
@@ -1,14 +1,16 @@
-<%= title t(:title) %>
+<div class="comments">
+  <%= title t(:title) %>
 
-<p class="about">
-  En este momento E3E está en fase de pruebas por lo que su opinión sobre esta herramienta es muy importante para nosotros.<br/>
-  Si se trata de algún problema de la herramienta o un mal funcionamiento agradeceríamos mucho que, además, especificase el nombre y la versión tanto del navegador como del sistema operativo que está usando.<br/>
-  Muchas gracias.
-</p>
+  <p class="about">
+    En este momento E3E está en fase de pruebas por lo que su opinión sobre esta herramienta es muy importante para nosotros.<br/>
+    Si se trata de algún problema de la herramienta o un mal funcionamiento agradeceríamos mucho que, además, especificase el nombre y la versión tanto del navegador como del sistema operativo que está usando.<br/>
+    Muchas gracias.
+  </p>
 
-<% form_tag(feedback_path) do %>
-<p class="feedback">
-<%= text_area_tag :body %>
-</p>
-  <%= submit_tag 'Enviar' %>
-<% end %>
+  <% form_tag(feedback_path) do %>
+    <p class="feedback">
+      <%= text_area_tag :body %>
+    </p>
+    <%= submit_tag 'Enviar' %>
+  <% end %>
+</div>
